--- a/.hgignore
+++ b/.hgignore
@@ -5,3 +5,11 @@ File-FindLines/module/META.json
 File-FindLines/module/META.yml
 File-FindLines/module/MYMETA.json
 File-FindLines/module/MYMETA.yml
+File-Find-Object-Rule/Build
+File-Find-Object-Rule/META.json
+File-Find-Object-Rule/META.yml
+File-Find-Object-Rule/MYMETA.json
+File-Find-Object-Rule/MYMETA.yml
+File-Find-Object-Rule/Makefile.PL
+File-Find-Object-Rule/_build
+File-Find-Object-Rule/blib
