--- a/.hgignore
+++ b/.hgignore
@@ -1,4 +1,5 @@
 File-Find-Object-Rule-MMagic/Build
+File-Find-Object-Rule-MMagic/Makefile.PL
 File-Find-Object-Rule-MMagic/META.json
 File-Find-Object-Rule-MMagic/META.yml
 File-Find-Object-Rule-MMagic/MYMETA.json
