--- a/File-Find-Object-Rule-VCS/META.yml
+++ b/File-Find-Object-Rule-VCS/META.yml
@@ -1,10 +1,12 @@
 ---
-abstract: "Exclude files/directories for Version Control \nSystems"
+abstract: 'Exclude files/directories for Version Control'
 author:
   - 'Shlomi Fish <shlomif@cpan.org>'
+build_requires: {}
 configure_requires:
-  Module::Build: 0.36
-generated_by: 'Module::Build version 0.3601'
+  Module::Build: 0.40
+dynamic_config: 1
+generated_by: 'Module::Build version 0.4007, CPAN::Meta::Converter version 2.132830'
 keywords:
   - bzr
   - cvs
@@ -28,7 +30,7 @@ name: File-Find-Object-Rule-VCS
 provides:
   File::Find::Object::Rule::VCS:
     file: lib/File/Find/Object/Rule/VCS.pm
-    version: v0.0.1
+    version: v0.0.2
 requires:
   Carp: 0
   File::Find::Object::Rule: 0
@@ -41,4 +43,7 @@ resources:
   homepage: http://www.shlomifish.org/open-source/projects/File-Find-Object/
   license: http://dev.perl.org/licenses/
   repository: http://svn.berlios.de/svnroot/repos/web-cpan/File-Find-Object/
-version: v0.0.1
+version: v0.0.2
+x_test_requires:
+  File::Spec: 0.82
+  Test::More: 0.47
