--- a/libfilefind/c_glib_based/CMakeLists.txt
+++ b/libfilefind/c_glib_based/CMakeLists.txt
@@ -59,7 +59,7 @@ IF(WIN32 AND NOT UNIX)
     SET(CPACK_NSIS_HELP_LINK "http:\\\\\\\\fc-solve.berlios.de")
     SET(CPACK_NSIS_URL_INFO_ABOUT "http:\\\\\\\\fc-solve.berlios.de")
     SET(CPACK_NSIS_DISPLAY_NAME "Freecell Solver")
-    SET(CPACK_NSIS_CONTACT "shlomif@iglu.org.il")
+    SET(CPACK_NSIS_CONTACT "shlomif@cpan.org")
     SET(CPACK_NSIS_MODIFY_PATH ON)
     # Setting for NSIS :
     SET(CPACK_NSIS_MUI_ICON "${CMAKE_CURRENT_SOURCE_DIR}\\\\fc-solve.ico")
