--- a/.hgignore
+++ b/.hgignore
@@ -6,14 +6,7 @@ File-Find-Object-Rule-MMagic/MYMETA.json
 File-Find-Object-Rule-MMagic/MYMETA.yml
 File-Find-Object-Rule-MMagic/_build
 File-Find-Object-Rule-MMagic/blib
-File-Find-Object-Rule-VCS/Build
-File-Find-Object-Rule-VCS/Makefile.PL
-File-Find-Object-Rule-VCS/META.json
-File-Find-Object-Rule-VCS/META.yml
-File-Find-Object-Rule-VCS/MYMETA.json
-File-Find-Object-Rule-VCS/MYMETA.yml
-File-Find-Object-Rule-VCS/_build
-File-Find-Object-Rule-VCS/blib
+File-Find-Object-Rule-VCS/.build
 File-Find-Object-Rule/Build
 File-Find-Object-Rule/META.json
 File-Find-Object-Rule/META.yml
