--- a/.hgignore
+++ b/.hgignore
@@ -7,13 +7,7 @@ File-Find-Object-Rule-MMagic/MYMETA.yml
 File-Find-Object-Rule-MMagic/_build
 File-Find-Object-Rule-MMagic/blib
 File-Find-Object-Rule-VCS/.build
-File-Find-Object-Rule/Build
-File-Find-Object-Rule/META.json
-File-Find-Object-Rule/META.yml
-File-Find-Object-Rule/MYMETA.json
-File-Find-Object-Rule/MYMETA.yml
-File-Find-Object-Rule/_build
-File-Find-Object-Rule/blib
+File-Find-Object-Rule/.build
 Stream-Extract/module/.build
 
 syntax: regexp
