--- a/File-Find-Object-Rule/dist.ini
+++ b/File-Find-Object-Rule/dist.ini
@@ -1,5 +1,5 @@
 name = File-Find-Object-Rule
-version = 0.0306
+version = 0.0307
 author = Richard Clamp <richardc@unixbeard.net> with input gained from this
 author = and Andy Lester andy@petdance.com.
 license = Perl_5
@@ -12,6 +12,8 @@ copyright_holder = Richard Clampwith input gained from this
 dist = File-Find-Object-Rule
 homepage = http://www.shlomifish.org/open-source/projects/File-Find-Object/
 repository_url = http://bitbucket.org/shlomif/perl-file-find-object-rule
+[ExecDir]
+dir = bin
 [Keywords]
 keyword = directories
 keyword = directory
