dzil and tidyall

--- a/File-Find-Object-Rule/dist.ini
+++ b/File-Find-Object-Rule/dist.ini
@@ -32,3 +32,5 @@ keyword = rule
 keyword = traversal
 keyword = tree
 keyword = wrapper
+[Test::TidyAll]
+; authordep Pod::Weaver::PluginBundle::SHLOMIF
