--- a/File-Find-Object-Rule/.tidyallrc
+++ b/File-Find-Object-Rule/.tidyallrc
@@ -1,3 +1,12 @@
+[PerlCritic]
+argv =
+select = {t,lib,scripts}/**/*.{pl,pm,t} {t,lib,scripts}/*.{pl,pm,t}
+ignore = t/release*.t lib/File/Find/Object/Rule.pm
+
 [PerlTidy]
 argv = -ci=4 -bl -cti=0
 select = {t,lib,scripts}/**/*.{pl,pm,t} {t,lib,scripts}/*.{pl,pm,t}
+ignore = t/release*.t
+
+[TestCount]
+select = t/*.t
