from bitbucket-hg to github due to sunsetting

--- a/File-Find-Object-Rule/dist.ini
+++ b/File-Find-Object-Rule/dist.ini
@@ -1,9 +1,9 @@
 name = File-Find-Object-Rule
-version = 0.0310
-author = Richard Clamp <richardc@unixbeard.net> with input gained from this
-author = and Andy Lester andy@petdance.com.
+version = 0.0311
+author = Richard Clamp <richardc@unixbeard.net>
+author = Andy Lester andy@petdance.com.
 license = Perl_5
-copyright_holder = Richard Clampwith input gained from this
+copyright_holder = Richard Clamp
 
 [@Filter]
 -bundle = @SHLOMIF
@@ -11,7 +11,7 @@ copyright_holder = Richard Clampwith input gained from this
 -remove = MakeMaker
 dist = File-Find-Object-Rule
 homepage = http://www.shlomifish.org/open-source/projects/File-Find-Object/
-repository_url = http://bitbucket.org/shlomif/perl-file-find-object-rule
+github_name = http://bitbucket.org/shlomif/perl-file-find-object-rule
 [ExecDir]
 dir = bin
 [Keywords]
