extract https://metacpan.org/pod/File::TreeCreate

--- a/libfilefind/c_glib_based/CMakeLists.txt
+++ b/libfilefind/c_glib_based/CMakeLists.txt
@@ -1,3 +1,4 @@
+PROJECT( "libfilefind" )
 INCLUDE(FindPkgConfig)
 
 MACRO(CHOMP VAR)
@@ -132,8 +133,8 @@ CONFIGURE_FILE(
 INCLUDE_DIRECTORIES(BEFORE ${CMAKE_CURRENT_BINARY_DIR})
 
 SET (FILEFIND_MODULES filefind.c)
-
-PKG_CHECK_MODULES (GLIB2   glib-2.0)
+# PKG_CHECK_MODULES (GLIB2 REQUIRED glib-2.0)
+pkg_check_modules(deps REQUIRED IMPORTED_TARGET glib-2.0)
 
 ADD_DEFINITIONS(${GLIB2_CFLAGS})
 
@@ -142,6 +143,9 @@ ADD_LIBRARY ("${LIBNAME}"
     SHARED
     ${FILEFIND_MODULES}
 )
+
+target_link_libraries( "${LIBNAME}" PkgConfig::deps)
+# SET_TARGET_PROPERTIES( "${LIBNAME}" PROPERTIES LINK_FLAGS ${GLIB2_LDFLAGS})
 
 LIST (APPEND PTHREAD_RWLOCK_FCFS_LIBS "${LIBNAME}")
 IF (${BUILD_STATIC_LIBRARY})
@@ -166,11 +170,9 @@ SET_TARGET_PROPERTIES("${LIBNAME}"
     PROPERTIES VERSION 0.1.0 SOVERSION 0
 )
 
-PKG_CHECK_MODULES (GLIB2 REQUIRED glib-2.0)
-
 ADD_EXECUTABLE("minifind" "minifind.c")
 TARGET_LINK_LIBRARIES("minifind" "${LIBNAME}")
-SET_TARGET_PROPERTIES("minifind" PROPERTIES LINK_FLAGS ${GLIB2_LDFLAGS})
+# SET_TARGET_PROPERTIES("minifind" PROPERTIES LINK_FLAGS ${GLIB2_LDFLAGS})
 
 INSTALL(
     FILES
@@ -192,10 +194,5 @@ INSTALL(
 
 ADD_CUSTOM_TARGET(
     "test"
-    "perl" "run-tests.pl"
-)
-
-ADD_DEPENDENCIES(
-    "test"
-    "all"
+    "perl" "${CMAKE_CURRENT_SOURCE_DIR}/run-tests.pl"
 )
