--- a/libfilefind/c_glib_based/CMakeLists.txt
+++ b/libfilefind/c_glib_based/CMakeLists.txt
@@ -1,9 +1,9 @@
 PROJECT( "libfilefind" )
-INCLUDE(FindPkgConfig)
 
-MACRO(CHOMP VAR)
-    STRING(REGEX REPLACE "[\r\n]+$" "" ${VAR} "${${VAR}}")
-ENDMACRO()
+INCLUDE ("${CMAKE_SOURCE_DIR}/cmake/shlomif_common_bootstrap.cmake")
+SHLOMIF_COMMON_SETUP("${private_mod_path}")
+
+INCLUDE(FindPkgConfig)
 
 SET(MYNAME "filefind")
 SET(DEBUG "" CACHE BOOL "Add debugging information")
@@ -14,16 +14,9 @@ SET(CPACK_PACKAGE_VENDOR "Shlomi Fish")
 SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README")
 SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/COPYING")
 
-# Process and extract the version number.
-FILE( READ "ver.txt" VERSION)
-
-CHOMP (VERSION)
-
-STRING (REGEX MATCHALL "([0-9]+)" VERSION_DIGITS "${VERSION}")
-
-LIST(GET VERSION_DIGITS 0 CPACK_PACKAGE_VERSION_MAJOR)
-LIST(GET VERSION_DIGITS 1 CPACK_PACKAGE_VERSION_MINOR)
-LIST(GET VERSION_DIGITS 2 CPACK_PACKAGE_VERSION_PATCH)
+# Introduces VERSION , CPACK_PACKAGE_VERSION_MAJOR,
+# CPACK_PACKAGE_VERSION_MAJOR, and CPACK_PACKAGE_VERSION_PATCH
+READ_VERSION_FROM_VER_TXT()
 
 SET(CPACK_PACKAGE_INSTALL_DIRECTORY "${CPACK_PACKAGE_DESCRIPTION_SUMMARY} ${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
 
