convert to asciidoc [fix]

--- a/libfilefind/c_glib_based/CMakeLists.txt
+++ b/libfilefind/c_glib_based/CMakeLists.txt
@@ -15,7 +15,7 @@ option (DISABLE_APPLYING_RPATH "Disable applying rpath")
 SET(CPACK_PACKAGE_NAME "lib${MYNAME}")
 SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "A C Library for Traversing a Directory Recursively")
 SET(CPACK_PACKAGE_VENDOR "Shlomi Fish")
-SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README")
+SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README.asciidoc")
 SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/COPYING")
 
 # Introduces VERSION , CPACK_PACKAGE_VERSION_MAJOR,
@@ -147,7 +147,7 @@ INSTALL(
         "AUTHORS"
         "COPYING"
         "NEWS"
-        "README"
+        "README.asciidoc"
         "TODO"
     DESTINATION
         "share/doc/${CPACK_PACKAGE_NAME}/"
